fix crash on launch with java 9+.