@@ -23,22 +23,21 @@ import appeng.block.crafting.AbstractCraftingUnitBlock;
 import com.google.common.collect.Lists;
 import net.minecraftforge.fml.common.EnhancedRuntimeException;
 import org.apache.commons.lang3.ArrayUtils;
+import sun.misc.Unsafe;
 
 import javax.annotation.Nullable;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
-import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.List;
 
 public class EnumHelper
 {
-    private static Object reflectionFactory      = null;
-    private static Method newConstructorAccessor = null;
-    private static Method newInstance            = null;
-    private static Method newFieldAccessor       = null;
-    private static Method fieldAccessorSet       = null;
-    private static boolean isSetup               = false;
+    private static MethodHandles.Lookup implLookup = null;
+    private static boolean isSetup                 = false;
 
     //Some enums are decompiled with extra arguments, so lets check for that
     private static Class<?>[][] commonTypes =
@@ -55,12 +54,17 @@ public class EnumHelper
 
         try
         {
-            Method getReflectionFactory = Class.forName("sun.reflect.ReflectionFactory").getDeclaredMethod("getReflectionFactory");
-            reflectionFactory      = getReflectionFactory.invoke(null);
-            newConstructorAccessor = Class.forName("sun.reflect.ReflectionFactory").getDeclaredMethod("newConstructorAccessor", Constructor.class);
-            newInstance            = Class.forName("sun.reflect.ConstructorAccessor").getDeclaredMethod("newInstance", Object[].class);
-            newFieldAccessor       = Class.forName("sun.reflect.ReflectionFactory").getDeclaredMethod("newFieldAccessor", Field.class, boolean.class);
-            fieldAccessorSet       = Class.forName("sun.reflect.FieldAccessor").getDeclaredMethod("set", Object.class, Object.class);
+            /*
+             * After Java 9, sun.reflect package was moved to jdk.internal.reflect and it requires extra operations to access.
+             * After Java 12, all members in java.lang.reflect.Field class were added to jdk.internal.reflect.Reflection#fieldFilterMap so that it was unable to access by using reflection.
+             * So the most reasonable way is to use java.lang.invoke.MethodHandles$Lookup#IMPL_LOOKUP to access each member after Java 8.
+             * See: https://stackoverflow.com/questions/61141836/change-static-final-field-in-java-12
+             */
+            Field unsafeField = Unsafe.class.getDeclaredField("theUnsafe");
+            unsafeField.setAccessible(true);
+            Unsafe unsafe = (Unsafe) unsafeField.get(null);
+            Field implLookupField = MethodHandles.Lookup.class.getDeclaredField("IMPL_LOOKUP");
+            implLookup = (MethodHandles.Lookup) unsafe.getObject(unsafe.staticFieldBase(implLookupField), unsafe.staticFieldOffset(implLookupField));
         }
         catch (Exception e)
         {
@@ -75,16 +79,16 @@ public class EnumHelper
      * Also modified for use in decompiled code.
      * Found at: http://niceideas.ch/roller2/badtrash/entry/java_create_enum_instances_dynamically
      */
-    private static Object getConstructorAccessor(Class<?> enumClass, Class<?>[] additionalParameterTypes) throws Exception
+    private static MethodHandle getConstructorAccessor(Class<?> enumClass, Class<?>[] additionalParameterTypes) throws Exception
     {
         Class<?>[] parameterTypes = new Class[additionalParameterTypes.length + 2];
         parameterTypes[0] = String.class;
         parameterTypes[1] = int.class;
         System.arraycopy(additionalParameterTypes, 0, parameterTypes, 2, additionalParameterTypes.length);
-        return newConstructorAccessor.invoke(reflectionFactory, enumClass.getDeclaredConstructor(parameterTypes));
+        return implLookup.findConstructor(enumClass, MethodType.methodType(void.class, parameterTypes));
     }
 
-    private static < T extends Enum<? >> T makeEnum(Class<T> enumClass, @Nullable String value, int ordinal, Class<?>[] additionalTypes, @Nullable Object[] additionalValues) throws Exception
+    private static < T extends Enum<? >> T makeEnum(Class<T> enumClass, @Nullable String value, int ordinal, Class<?>[] additionalTypes, @Nullable Object[] additionalValues) throws Throwable
     {
         int additionalParamsCount = additionalValues == null ? 0 : additionalValues.length;
         Object[] params = new Object[additionalParamsCount + 2];
@@ -94,20 +98,22 @@ public class EnumHelper
         {
             System.arraycopy(additionalValues, 0, params, 2, additionalValues.length);
         }
-        return enumClass.cast(newInstance.invoke(getConstructorAccessor(enumClass, additionalTypes), new Object[] {params}));
+        return enumClass.cast(getConstructorAccessor(enumClass, additionalTypes).invokeWithArguments(params));
     }
 
-    public static void setFailsafeFieldValue(Field field, @Nullable Object target, @Nullable Object value) throws Exception
+    public static void setFailsafeFieldValue(Field field, @Nullable Object target, @Nullable Object value) throws Throwable
     {
-        field.setAccessible(true);
-        Field modifiersField = Field.class.getDeclaredField("modifiers");
-        modifiersField.setAccessible(true);
-        modifiersField.setInt(field, field.getModifiers() & ~Modifier.FINAL);
-        Object fieldAccessor = newFieldAccessor.invoke(reflectionFactory, field, false);
-        fieldAccessorSet.invoke(fieldAccessor, target, value);
+        if (target != null)
+        {
+            implLookup.findSetter(field.getDeclaringClass(), field.getName(), field.getType()).invoke(target, value);
+        }
+        else
+        {
+            implLookup.findStaticSetter(field.getDeclaringClass(), field.getName(), field.getType()).invoke(value);
+        }
     }
 
-    private static void blankField(Class<?> enumClass, String fieldName) throws Exception
+    private static void blankField(Class<?> enumClass, String fieldName) throws Throwable
     {
         for (Field field : Class.class.getDeclaredFields())
         {
@@ -120,7 +126,7 @@ public class EnumHelper
         }
     }
 
-    private static void cleanEnumCache(Class<?> enumClass) throws Exception
+    private static void cleanEnumCache(Class<?> enumClass) throws Throwable
     {
         blankField(enumClass, "enumConstantDirectory");
         blankField(enumClass, "enumConstants");
@@ -293,10 +299,10 @@ public class EnumHelper
 
             return newValue;
         }
-        catch (Exception e)
+        catch (Throwable t)
         {
             //FMLLog.log.error("Error adding enum with EnumHelper.", e);
-            throw new RuntimeException(e);
+            throw new RuntimeException(t);
         }
     }
 
